--- a/playground/running-js.html
+++ b/playground/running-js.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+  <p> hey! </p>
+
+  <script src="./some.js"></script>
+  
+  <script>
+    //console.log("hello world");
+    const p=document.querySelector('p');
+    console.log(p);
+  </script>
 
 </body>
 
