Ep4, about variables and naming conventions.

--- a/playground/variables.html
+++ b/playground/variables.html
@@ -10,6 +10,28 @@
 
 <body>
 
+<script>
+  'use strict'
+  var first='wes';//function scoped
+  let age=300;//block scoped
+  const cool=true;//can't be assigned new value afterward.
+  //only declaration need to add type. 
+
+  
+  console.log(first);
+  if(age>10){
+    console.log("you r old");
+  }
+
+  //camel case, upper camel case
+  let iLovePizza='yes';
+  let ILovePizza='yes';//classname
+  //snake case
+  let this_is_snake_case='cool'
+
+
+</script>
+
 </body>
 
 </html>
