Ep12, built-in functions

--- a/playground/functions.html
+++ b/playground/functions.html
@@ -8,9 +8,48 @@
   <title>Functions!!</title>
   <link rel="stylesheet" href="../base.css">
 </head>
+<p>hi</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ea laborum ipsam dolores incidunt! Vitae nulla fuga
+  esse quam, qui incidunt unde molestias sed, delectus nostrum eaque, est sunt repellat!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quibusdam aut, excepturi similique consequatur
+  laudantium officiis. Nihil ut atque voluptatibus quis explicabo natus pariatur. Sint velit possimus officiis aut saepe
+  ipsam ad unde similique, tempore illo perferendis vel accusantium quia voluptatum beatae. Eos sequi quibusdam illum
+  reprehenderit veniam ex reiciendis consectetur laboriosam incidunt soluta voluptatem placeat consequuntur ipsa, error
+  ea facilis maiores totam impedit, nostrum itaque, consequatur accusamus suscipit. Aperiam possimus ipsa accusantium
+  eveniet fugiat laborum minus ipsam atque debitis explicabo minima ipsum reiciendis at illo, repellendus aliquam quam
+  labore quaerat. Consequatur tempora labore ipsum veniam similique sunt eveniet quae dolore dolorum obcaecati
+  consequuntur cupiditate sint voluptatem dolor, fugiat commodi doloribus voluptatum totam! Dolorem voluptatem quasi
+  voluptates atque aliquid perferendis ex assumenda officia dicta, reiciendis cumque iure maiores, doloremque quod.
+  Repellendus et eos distinctio veniam reprehenderit quos quibusdam minus, error debitis odit non ab hic laborum
+  doloribus a optio enim ipsum explicabo amet delectus quia? Rerum, amet! Aperiam id expedita, voluptatem totam
+  veritatis corrupti repellendus minima sequi nesciunt sed est eos sunt asperiores iste vero in voluptatum. Nemo
+  excepturi reprehenderit architecto sequi atque tenetur ratione asperiores, cumque nostrum, ea iure quod perspiciatis
+  facere laboriosam odio! Libero magnam molestiae cupiditate porro non aliquam laudantium. Beatae iste magnam unde modi
+  sunt consequatur nulla incidunt a culpa. Ducimus tenetur minus necessitatibus doloribus incidunt autem voluptate neque
+  expedita velit et! Minus eligendi, aut dolores placeat nihil labore ad iste expedita nisi harum odio ducimus quod
+  autem dolor veritatis dicta quo doloremque sequi. Inventore, ratione cum? Aut ab ipsa ad magnam eligendi aspernatur
+  cum illo debitis earum sit corporis suscipit illum molestiae, quibusdam unde error et esse perferendis sed dolores
+  maxime ut? Consequuntur nemo enim rerum perspiciatis corporis dicta quis consectetur dolor explicabo veniam animi
+  numquam, laudantium fugiat odio deleniti libero ut magnam quibusdam consequatur! Molestiae esse quos temporibus ad
+  consequuntur dolor? Reprehenderit, aliquid hic magnam praesentium illum suscipit nam voluptatibus ab quas dolorem quam
+  quisquam exercitationem! Adipisci nostrum facilis ducimus nobis, atque a expedita, nam commodi deserunt harum aperiam
+  vel fuga accusantium ratione magni et modi doloremque recusandae repellendus temporibus sed quam sint exercitationem!
+  Ipsam voluptatibus totam quaerat quis! Totam similique sint ullam tempore exercitationem facere! Consequuntur quam
+  exercitationem porro error unde, deserunt et ullam natus, suscipit repellat assumenda corrupti in aperiam ex vero
+  voluptas totam nihil beatae repudiandae recusandae. Qui velit veritatis exercitationem doloremque ullam quo saepe,
+  esse optio non cum adipisci enim. Quam maxime officia fuga ipsa! Consectetur minus est odio quidem, autem iste, quae
+  harum nesciunt laudantium eos saepe. Excepturi minus ab eum sed! Optio illum quaerat repellat? Minus quo repudiandae
+  harum ducimus dolorum eius iusto impedit repellendus necessitatibus numquam consectetur fuga doloribus, omnis eaque.
+  Mollitia tenetur quod veniam! Similique consectetur accusamus tempore possimus in odit alias velit, inventore dolores
+  qui aperiam. Cumque numquam beatae impedit? Pariatur suscipit optio repellat nisi earum vitae minima iure doloribus
+  incidunt officia ipsa dolores voluptates cumque sunt id velit a, dignissimos corporis voluptas deserunt aliquam, eum
+  porro saepe consequatur. Molestias ab laborum voluptate dolorem nulla?</p>
 
 <body>
-
+  <script>
+    const p = document.querySelector('p');
+    console.log(p);
+  </script>
 </body>
 
 </html>
