Ep17, Scope of var and functions

--- a/playground/scope.html
+++ b/playground/scope.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+  <script src="./scope.js"></script>
+
+  <script>
+    console.log(first);
+    // first js file then here
+  </script>
 
 </body>
 
