--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -6,10 +6,30 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>The DOM</title>
   <link rel="stylesheet" href="../../base.css">
+
 </head>
 
 <body>
   <div class="items">
+    <div class="item">
+      <img src="https://source.unsplash.com/random/300x300" />
+      <p>Hi I'm a item</p>
+    </div>
+    <div class="item item2">
+      <img src="https://source.unsplash.com/random/300x300" />
+      <p>Hi I'm a item</p>
+    </div>
+    <div class="item">
+      <img src="https://source.unsplash.com/random/300x300" />
+      <p>Hi I'm a item</p>
+    </div>
+    <p>Hi I'm a item</p>
+    <div>
+      <h2>Sub Div</h2>
+      <p>Hi I'm a item</p>
+    </div>
+    <img src="https://source.unsplash.com/random/300x300" />
+    <p>Hi I'm a item</p>
     <p>Hi I'm a item</p>
     <div>
       <h2>Sub Div</h2>
@@ -17,9 +37,9 @@
 
     </div>
     <img src="https://source.unsplash.com/random/300x300" />
-    <p>Hi I'm a item</p>
-    <p>Hi I'm a item</p>
   </div>
+  <script src="./the-dom.js"></script>
+
 </body>
 
 </html>
