Ep22, Element Properties and Methods

--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -18,7 +18,20 @@
     <div class="item item2">
       <img src="https://source.unsplash.com/random/300x300" />
       <p>Hi I'm a item</p>
+      <h2>H2
+        <style>
+          h2 {
+            color: red;
+          }
+        </style>
+      </h2>
     </div>
+    <article class="item">
+      <h2>Im an article</h2>
+      <p class="pizza">this is how many pizzas i ate 🍕</p>
+    </article>
+
+
     <div class="item">
       <img src="https://source.unsplash.com/random/300x300" />
       <p>Hi I'm a item</p>
