--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <img class="nice cool" src="https://source.unsplash.com/random/600x300" />
+
+
   <div class="items">
     <div class="item">
       <img src="https://source.unsplash.com/random/300x300" />
@@ -51,6 +54,20 @@
     </div>
     <img src="https://source.unsplash.com/random/300x300" />
   </div>
+
+
+  <style>
+    img {
+      transition: all 0.5S;
+
+    }
+
+    .round {
+      border-radius: 50%;
+      transform: rotate(90deg) scale(2);
+      box-shadow: 0 0 10px black;
+    }
+  </style>
   <script src="./the-dom.js"></script>
 
 </body>
