Ep24, Build-in and Custom Data Attributes.

--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -15,7 +15,7 @@
 
   <div class="items">
     <div class="item">
-      <img src="https://source.unsplash.com/random/300x300" />
+      <img class="custom" data-first="bos" data-name="wes" src="https://source.unsplash.com/random/300x300" />
       <p>Hi I'm a item</p>
     </div>
     <div class="item item2">
