Ep25, JS Creating HTML using createElement, insertAdjacentHTML

--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -51,24 +51,22 @@
       <h2>Sub Div</h2>
       <p>Hi I'm a item</p>
 
-    </div>
-    <img src="https://source.unsplash.com/random/300x300" />
-  </div>
 
 
-  <style>
-    img {
-      transition: all 0.5S;
+      <style>
+        img {
+          transition: all 0.5S;
 
-    }
+        }
 
-    .round {
-      border-radius: 50%;
-      transform: rotate(90deg) scale(2);
-      box-shadow: 0 0 10px black;
-    }
-  </style>
-  <script src="./the-dom.js"></script>
+        .round {
+          border-radius: 50%;
+          transform: rotate(90deg) scale(2);
+          box-shadow: 0 0 10px black;
+        }
+      </style>
+
+      <script src="./creating.js"></script>
 
 </body>
 
