Ep27, Traversing and Removing Nodes, elements

--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <p class="wes">I am wes<em>i love bbq</em><strong>make websites</strong></p>
   <img class="nice cool" src="https://source.unsplash.com/random/600x300" />
 
   <div class="items">
@@ -65,7 +66,7 @@
         }
       </style>
 
-      <script src="./creating-with-strings.js"></script>
+      <script src="./traversing.js"></script>
 
 </body>
 
