Ep30, Events - targets, bubbling, propagation and capture

--- a/exercises/29 - Events/events.html
+++ b/exercises/29 - Events/events.html
@@ -11,7 +11,6 @@
 <body>
   <button class="butts">click me!</button>
   <button class='cool'>click me cool!</button>
-  <script src='./events.js'></script>
 
   <h2>Buy Buttons!</h2>
   <button data-price="100" class="buy">Buy Item <strong>1</strong></button>
@@ -24,6 +23,10 @@
   <button data-price="800" class="buy">Buy Item <strong>8</strong></button>
   <button data-price="900" class="buy">Buy Item <strong>9</strong></button>
   <button data-price="1000" class="buy">Buy Item <strong>10</strong></button>
+
+  <img class="photo" src="https://picsum.photos/200" alt="Nice">
+
+  <script src='./events.js'></script>
 
 </body>
 
