Ep38, Flow Control - If Statements, Function Returns, Truthy, Falsy.

--- a/playground/if-statements.html
+++ b/playground/if-statements.html
@@ -9,10 +9,71 @@
 </head>
 
 <body>
-  <script>
-    if (10 > 2) {
-      console.log('Yep');
+
+  * empty array
+  * empty object
+
+  <h2>Truthy Values</h2>
+  * 1
+  * -10
+  * full string
+  * a string of "0"
+
+  <h2>Falsy Values</h2>
+  * 0
+  * undefined variable
+  * Variable set to null
+  * a variable set to `"hello" - 10` NaN
+  * empty string
+
+  <script>const age = 100;
+    if (age > 70) {
+      console.log('In your seventies');
+    } else if (age > 60) {
+      console.log('In your sixties');
+    } else if (age > 50) {
+      console.log('In your 50s');
+    } else {
+      console.log('Nothing was true');
     }
+    // regex
+    function slugify(sentence, lowercase) {
+      const slug = sentence.replace(/\s/g, '-');
+      if (lowercase) {
+        return slug.toLowerCase();
+      }
+      return slug;
+    }
+
+    // includes
+    const isAwesomeName = 'awesome'.includes(name);
+    if (isAwesomeName) {
+      console.log('SUPER COOL AWESOME NAME');
+    }
+
+    // truthy or falsy for different types,
+    const values = [
+      [],
+      {},
+      -10,
+      1,
+      0,
+      '',
+      'full string',
+      ' ',
+      undefined,
+      NaN,
+      null,
+      '0️⃣',
+      '💩',
+    ];
+    values.forEach((value) => {
+      if (value) {
+        console.log(value, 'is truthy');
+      } else {
+        console.log(value, 'is falsy');
+      }
+    });
   </script>
 </body>
 
