Ep39 Coercion, Ternaries, short circuiting in logic chain

--- a/playground/if-statements.html
+++ b/playground/if-statements.html
@@ -74,6 +74,23 @@
         console.log(value, 'is falsy');
       }
     });
+
+    console.clear();
+    // coercion
+
+    // ternary
+    // 1. Condition
+    // 2. what to do if true
+    // 3. what to do if false
+    const count = 5234234;
+    const word = count === 1 ? 'item' : 'items';
+    const sentence = `You have ${count} item${count === 1 ? '' : 's'} in your cart`;
+    console.log(sentence);
+
+    // short circuiting in logic chain
+
+    // blockless if statement
+    //    if (isAdmin) { showAdminBar(); }
   </script>
 </body>
 
