Ep48,Array Cardio - Callback Methods and Function Generation

--- a/exercises/46 - Arrays/array-methods-START.html
+++ b/exercises/46 - Arrays/array-methods-START.html
@@ -136,22 +136,72 @@
     // flip those toppings around with reverse()
     const toppingsReversed = [...toppings].reverse();
     console.log(toppingsReversed);
-    
+
     /*
       Callback Methods
     */
 
     // find the first rating that talks about a burger with find()
+
+    // return a function
+    function findByWord(word) {
+      return function (singleFeedback) {
+        return singleFeedback.comment.includes(word);
+      };
+    }
+    const burgRating = feedback.find(findByWord('burg'));
+
     // find all ratings that are above 2 with filter()
+    // const goodReviews = feedback.filter(
+    //  (singleFeedback) => singleFeedback.rating > 2
+    // );
+
+    function filterByMinRating(minRating) {
+      return function (singleFeedback) {
+        return singleFeedback.rating > minRating;
+      };
+    }
+    const goodReviews = feedback.filter(filterByMinRating(4));
+    console.table(goodReviews);
+
     // find all ratings that talk about a burger with filter()
+    const burgRatings = feedback.filter(findByWord('burg'));
+    console.table(burgRatings);
+
     // Remove the one star rating however you like!
+    const legitRatings = feedback.filter((single) => single.rating !== 1);
+    console.table(legitRatings);
 
     // check if there is at least 5 of one type of meat with some()
+    const isThereEnoughOfAtLeastOneMeat = Object.values(meats).some(
+      (meatValue) => meatValue >= 5
+    );
+    console.log(isThereEnoughOfAtLeastOneMeat);
     // make sure we have at least 3 of every meat with every()
+    const isThereEnoughOfEveryMeat = Object.values(meats).every(
+      (meatValue) => meatValue >= 3
+    );
+    console.log(isThereEnoughOfEveryMeat);
     // sort the toppings alphabetically with sort()
+    const numbers = [1, 2, 100, 3, 200, 400, 155];
+    const numbersSorted = numbers.sort(
+      (firstItem, secondItem) => firstItem - secondItem
+    );
+    console.log(numbersSorted);
+    console.log(toppings.sort());
     // sort the order totals from most expensive to least with .sort()
+    function numberSort(a, b) {
+      return b - a;
+    }
+    console.log(orderTotals.sort(numberSort));
     // Sort the prices with sort()
 
+    const productsSortedByPrice = Object.entries(prices).sort((a, b) => {
+      const aPrice = a[1];
+      const bPrice = b[1];
+      return aPrice - bPrice;
+    });
+    console.table(Object.fromEntries(productsSortedByPrice));
     /*
       Looping Methods (next)
     */
