--- a/exercises/46 - Arrays/array-loopings-methods-START.html
+++ b/exercises/46 - Arrays/array-loopings-methods-START.html
@@ -155,6 +155,61 @@
         : console.log('Getting the next Topping');
     }
     toppings.forEach(logTopping);
+
+    // Map, Filter, Reduce
+    console.clear();
+
+    function addArms(face) {
+      return `👋 ${face} 👋`;
+    }
+    const toys = faces.map(addArms);
+    console.log(toys);
+
+    function bosify(name) {
+      return `${name} Bos`;
+    }
+
+    function capitalize(word) {
+      return `${word[0].toUpperCase()}${word.slice(1)}`;
+    }
+
+    const fullNames = ['wes', 'kait', 'poppy'].map(capitalize).map(bosify);
+    console.log(fullNames);
+
+    const orderTotalsWithTax = orderTotals.map((total) => total * 1.13);
+    console.log(orderTotalsWithTax);
+
+    //     function attachBody(face, body) {
+    //       return `
+    //           ${face}
+    // 　　　　　${body.repeat(3)}
+    // 　　　　 ${Array(3).fill(body).join(' ')}
+    // 　　　👇🏽　 ${body.repeat(2)}　👇🏽
+    //         ${Array(2).fill(body).join('   ')}
+    //         ${Array(2).fill(body).join('   ')}
+    // 　　　　　👢　　👢
+    //       `
+    //     }
+
+    //     faces.map(face => attachBody(face, '🍟')).forEach(body => console.log(body))
+    const cleanPeople = people.map((person) => {
+      // get their birthday
+      const birthday = new Date(person.birthday).getTime();
+      const now = Date.now();
+      // figure out how old they are
+      const age = Math.floor((now - birthday) / 31536000000);
+      console.log(age);
+      // return their full name and bday in an object
+      return {
+        age,
+        name: `${person.names.first} ${person.names.last}`,
+      };
+    });
+
+    console.table(cleanPeople);
+
+
+    
   </script>
 </body>
 
