--- a/playground/new-this.html
+++ b/playground/new-this.html
@@ -28,13 +28,58 @@
       this.toppings = toppings;
       this.customer = customer;
       this.id = Math.floor(Math.random() * 16777215).toString(16);
+      this.slices = 10;
+      // this.eat = function () {
+      //     console.log('chomp');
+      //     if (this.slices > 0) {
+      //       this.slices -= 1;
+      //       console.log(`chomp you now have${this.slices} left!`);
+      //     } else {
+      //       console.log('sorry! no slices left');
+      //     }
+      //   };
     }
 
-    const pepperoniPizza = new Pizza(['toppings'], 'leroy');
-    console.log(pepperoniPizza);
-    console.log(pepperoniPizza.constructor);
-    console.log(pepperoniPizza instanceof Pizza);
+    Pizza.prototype.eat = function () {
+      console.log('chomp');
+      if (this.slices > 0) {
+        this.slices -= 1;
+        console.log(`chomp you now have ${this.slices} left!`);
+      } else {
+        console.log('sorry! no slices left');
+      }
+    };
 
+    Pizza.prototype.describe = function () {
+      return `This pizza is for ${this.customer
+        } with the toppings ${this.toppings.join(',')} and there are ${this.slices
+        } left!`;
+    };
+
+    const pepperoniPizza = new Pizza(['pepperoni'], 'leroy');
+    const canadianPizza = new Pizza(['pepperoni', 'meat'], 'ashley');
+
+    console.log(pepperoniPizza);
+    console.log(canadianPizza);
+    // console.log(pepperoniPizza.constructor);
+    // console.log(pepperoniPizza instanceof Pizza);
+
+    // can add new function to the objects
+    String.prototype.sarcastic = function () {
+      // make sarcastic
+      return [...this]
+        .map((char, i) => char[`to${i % 2 ? 'Upper' : 'Lower'}Case`]())
+        .join('');
+      const sarcastic = this.split('')
+        .map((char, i) => {
+          if (i % 2) {
+            return char.toUpperCase();
+          }
+          return char.toLowerCase();
+        })
+        .join('');
+      return sarcastic;
+    };
 
     const button1 = document.querySelector('.one');
     const button2 = document.querySelector('.two');
@@ -50,9 +95,6 @@
 
     button1.addEventListener('click', tellMeAboutTheButton);
     button2.addEventListener('click', tellMeAboutTheButton);
-
-
-    
   </script>
 </body>
 
