--- a/playground/bind-call-apply.html
+++ b/playground/bind-call-apply.html
@@ -9,7 +9,79 @@
 </head>
 
 <body>
+  <p>Hey</p>
+  <button>Click me</button>
+  <div class="wrapper">
+    <p>Hey im in a wrapper</p>
+  </div>
 
+
+  <script>
+    const person = {
+      name: 'wes bos',
+      sayHi() {
+        console.log(this);
+        console.log(`hey ${this.name}`);
+        return `hey ${this.name}`;
+      },
+    };
+    const jenna = { name: 'jenna' };
+
+    const { sayHi } = person;
+
+    // when sayHi2 is called, this keyword will be equal to the person passed in
+    const sayHi2 = person.sayHi.bind(person);
+    const sayHi3 = person.sayHi.bind(jenna);
+
+    // QS example
+    // by calling bind against querySelector, we say when the $ function is run, use `document` as the `this` value.
+    const $ = document.querySelector.bind(document);
+    const lookFor = document.querySelectorAll.bind(document);
+
+    const wrapper = document.querySelector('.wrapper');
+    const p = wrapper.querySelector('p');
+    console.log(p);
+    console.log($('p'));
+    console.log(lookFor('p'));
+
+    // example
+    const bill = {
+      total: 1000,
+      calculate(taxRate) {
+        console.log(this);
+        return this.total + this.total * taxRate;
+      },
+
+      describe(mealType, drinkType, taxRate) {
+        console.log(
+          `Your meal of ${mealType} with a drink of ${drinkType} was ${this.calculate(
+            taxRate
+          )}`
+        );
+      },
+    };
+
+    const total = bill.calculate(0.13);
+    console.log(total);
+
+    // bind and call later
+    const calc = bill.calculate.bind({ total: 500 }, 0.06);
+    console.log(calc());
+
+    // call will run immediately
+    const total2 = bill.calculate.call({ total: 500 }, 0.06);
+    console.log(total2);
+
+    // compared to call, apply pass in an array
+    const total3 = bill.calculate.apply({ total: 325 }, [0.6]);
+    console.log(total3);
+
+    const myMeal = bill.describe.call(bill, 'pizza', 'beer', 0.13);
+    console.log(myMeal);
+
+    const myMeal2 = bill.describe.apply(bill, ['pizza', 'beer', 0.13]);
+    console.log(myMeal2);
+  </script>
 </body>
 
 </html>
