--- a/playground/event-loop.html
+++ b/playground/event-loop.html
@@ -9,9 +9,77 @@
 </head>
 
 <body>
-  <script>
+  <style>
+    .go {
+      margin: 5rem;
+      background: white;
+      padding: 5rem;
+      width: 25rem;
+      height: 25rem;
+      transition: all 0.2s;
+    }
 
+    .go.circle {
+      border-radius: 50%;
+    }
+
+    .go.red {
+      background: red;
+    }
+
+    .go.purple {
+      background: purple;
+      color: white;
+    }
+
+    .go.fadeOut {
+      opacity: 0;
+    }
+  </style>
+
+  <div class="go">Click Me</div>
+
+  <script>
+    // console.log('starting');
+    // setTimeout(() => {
+    //  console.log('Running');
+    // }, 2000);
+    // console.log('ending');
+
+    // callback hell, 'promises' all to write code is much flatter
+    const go = document.querySelector('.go');
+    // 1. Change the text to GO when clicked.
+    go.addEventListener('click', (e) => {
+      const el = e.currentTarget;
+      el.textContent = 'GO';
+      // 2. Make it a circle after 2 seconds
+      setTimeout(() => {
+        el.classList.add('circle');
+        // 3. Make it red after 0.5s
+        setTimeout(() => {
+          el.classList.add('red');
+          // 4. make it square after 0.25s
+          setTimeout(() => {
+            el.classList.remove('circle');
+            // 5. make it purple
+            setTimeout(() => {
+              el.classList.remove('red');
+              el.classList.add('purple');
+              setTimeout(() => {
+                // 6. fade out after 0.5s
+                el.classList.add('fadeOut');
+                setTimeout(() => {
+                  console.log('You have reacted the 7th layer of callback hell');
+                  el.classList.remove('invisible', 'purple');
+                }, 500);
+              }, 500);
+            }, 500);
+          }, 500);
+        }, 500);
+      }, 500);
+    });
   </script>
+
 </body>
 
 </html>
