--- a/playground/promises.html
+++ b/playground/promises.html
@@ -10,7 +10,110 @@
 
 <body>
   <script>
+    function makePizza(toppings = []) {
+      return new Promise((resolve, reject) => {
+        // reject if people try with pineapple
+        if (toppings.includes('pineapple')) {
+          reject('Seriously? Get out 🍍');
+        }
 
+        const amountOfTimeToBake = 500 + toppings.length * 200;
+        // wait 1 second for the pizza to cook
+        setTimeout(() => {
+          // when u r ready, u can resolve this promise
+          resolve(`Here is your pizza 🍕 with the toppings ${toppings.join(' ')}`);
+        }, amountOfTimeToBake);
+        // if something went wrong, we reject this promise
+      });
+    }
+
+    // const pepperoniPromise = makePizza(['pepperoni']);
+    // const canadianPromise = makePizza(['pepperoni', 'mushrooms']);
+
+    // console.log(pepperoniPromise);
+    // pepperoniPromise.then((pizza) => {
+    //   console.log('got it!');
+    //   console.log(pizza);
+    // });
+
+    console.log('First');
+
+    makePizza(['pepperoni'])
+      .then((pizza) => {
+        console.log(pizza);
+        return makePizza(['ham', 'cheese']);
+      })
+      .then((pizza) => {
+        console.log(pizza);
+        return makePizza(['hot peppers', 'onion', 'feta']);
+      })
+      .then((pizza) => {
+        console.log(pizza);
+        return makePizza(['pineapple']);
+      })
+      .then((pizza) => {
+        console.log(pizza);
+        return makePizza([
+          'one',
+          'two',
+          'three',
+          'four',
+          'one',
+          'two',
+          'three',
+          'four',
+          'one',
+          'two',
+          'three',
+          'four',
+        ]);
+      })
+      .then((pizza) => {
+        console.log('All done! here is your last pizza');
+        console.log(pizza);
+      });
+
+    console.log('Right after');
+
+    // Run them Concurrently
+    const pizzaPromise1 = makePizza(['hot peppers', 'onion', 'feta']);
+    const pizzaPromise2 = makePizza([
+      'one',
+      'two',
+      'three',
+      'four',
+      'one',
+      'two',
+      'three',
+      'four',
+      'one',
+      'two',
+      'three',
+      'four',
+    ]);
+    const pizzaPromise3 = makePizza(['ham', 'cheese']);
+    // static method
+    const dinnerPromise = Promise.all([
+      pizzaPromise1,
+      pizzaPromise2,
+      pizzaPromise3,
+    ]);
+
+    // array destructuring
+    dinnerPromise.then(([hottie, garbagePail, hamAndCheese]) => {
+      console.log(hottie, garbagePail, hamAndCheese);
+    });
+
+    const firstPizzaPromise = Promise.race([
+      pizzaPromise1,
+      pizzaPromise2,
+      pizzaPromise3,
+    ]);
+
+    firstPizzaPromise.then((pizza) => {
+      console.log('You must be hungry, here is the first one ready');
+      console.log(pizza);
+    });
   </script>
 </body>
 
