--- a/playground/async-await-error-handling.html
+++ b/playground/async-await-error-handling.html
@@ -13,18 +13,18 @@
     function wait(ms = 0) {
       return new Promise((resolve) => {
         setTimeout(resolve, ms);
-      })
+      });
     }
 
     function makePizza(toppings = []) {
-      return new Promise(function (resolve, reject) {
+      return new Promise((resolve, reject) => {
         // reject if people try with pineapple
         if (toppings.includes('pineapple')) {
           reject('Seriously? Get out 🍍');
         }
-        const amountOfTimeToBake = 500 + (toppings.length * 200);
+        const amountOfTimeToBake = 500 + toppings.length * 200;
         // wait 1 second for the pizza to cook:
-        setTimeout(function () {
+        setTimeout(() => {
           // when you are ready, you can resolve this promise
           resolve(`Here is your pizza 🍕 with the toppings ${toppings.join(' ')}`);
         }, amountOfTimeToBake);
@@ -32,6 +32,36 @@
       });
     }
 
+    // try and catch
+    // async function go() {
+    //     try {
+    //       const pizza = await makePizza(['pineapple']);
+    //       console.log(pizza);
+    //     } catch (err) {
+    //       console.log(err);
+    //     }
+    //   }
+
+    async function go() {
+      const pizza = await makePizza(['pineapple']).catch(handleError);
+      console.log(pizza);
+    }
+
+    function handleError(err) {
+      console.log(err);
+    }
+
+    // async function will return a promise
+    go().catch(handleError);
+
+    // make a safe function with a higher order function
+    function makeSafe(fn, handleError) {
+      return function () {
+        fn().catch(handleError);
+      };
+    }
+    const safeGo = makeSafe(go, handleError);
+    safeGo();
   </script>
 </body>
 
