--- a/exercises/76 - Dad Jokes/index.html
+++ b/exercises/76 - Dad Jokes/index.html
@@ -15,15 +15,80 @@
       font-size: 5rem;
       font-weight: 900;
     }
+
+    .lds-ripple {
+      display: inline-block;
+      position: relative;
+      --size: 20px;
+      width: var(--size);
+      height: var(--size);
+    }
+
+    .lds-ripple div {
+      position: absolute;
+      border: 4px solid var(--yellow);
+      opacity: 1;
+      border-radius: 50%;
+      animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+    }
+
+    .lds-ripple div:nth-child(2) {
+      animation-delay: -0.5s;
+    }
+
+    @keyframes lds-ripple {
+      0% {
+        top: 36px;
+        left: 36px;
+        width: 0;
+        height: 0;
+        opacity: 0;
+      }
+
+      4.9% {
+        top: 36px;
+        left: 36px;
+        width: 0;
+        height: 0;
+        opacity: 0;
+      }
+
+      5% {
+        top: 36px;
+        left: 36px;
+        width: 0;
+        height: 0;
+        opacity: 1;
+      }
+
+      100% {
+        top: 0px;
+        left: 0px;
+        width: 72px;
+        height: 72px;
+        opacity: 0;
+      }
+    }
+
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 
 <body>
   <div class="wrapper">
     <div class="joke">
+
       <p>Dad Jokes.</p>
     </div>
-    <button class="getJoke">Get A Joke</button>
+    <button class="getJoke">
+      <span class="jokeText">Get A Joke</span>
+      <div class="lds-ripple loader hidden">
+        <div></div>
+        <div></div>
+      </div>
+    </button>
   </div>
 
   <script src="./jokes.js"></script>
