--- a/exercises/77 - Currency Converter/index.html
+++ b/exercises/77 - Currency Converter/index.html
@@ -24,7 +24,7 @@
       <p class="to_amount">$0</p>
     </form>
   </div>
-  <script src="./money.js"></script>
+  <script src="./money-FINISHED.js"></script>
 </body>
 
 </html>
