Ep77, try to use new api rewrite the demo

--- a/playground/async-await.html
+++ b/playground/async-await.html
@@ -10,6 +10,7 @@
 
 <body>
   <script>
+    //return promise
     async function wait(ms = 0) {
       return new Promise((resolve) => {
         setTimeout(resolve, ms);
