--- a/exercises/77 - Currency Converter/index.html
+++ b/exercises/77 - Currency Converter/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="app">
     <form>
-      <input type="number" name="from_amount">
+      <input type="number" name="from_amount" value=100>
       <select name="from_currency">
         <option>Select a Currency</option>
       </select>
@@ -24,7 +24,7 @@
       <p class="to_amount">$0</p>
     </form>
   </div>
-  <script src="./money-FINISHED.js"></script>
+  <script src="./money.js"></script>
 </body>
 
 </html>
